--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>care.fullcircle</groupId>
+    <groupId>com.kindgeek</groupId>
     <artifactId>boot_security</artifactId>
     <version>1.0</version>
 
@@ -21,26 +21,13 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <!--<repositories>-->
-        <!--&lt;!&ndash; elastic repo &ndash;&gt;-->
-        <!--<repository>-->
-            <!--<id>elastic</id>-->
-            <!--<url>https://artifacts.elastic.co/maven</url>-->
-            <!--<releases>-->
-                <!--<enabled>true</enabled>-->
-            <!--</releases>-->
-            <!--<snapshots>-->
-                <!--<enabled>false</enabled>-->
-            <!--</snapshots>-->
-        <!--</repository>-->
-    <!--</repositories>-->
-
     <dependencies>
         <dependency>
-            <groupId>care.fullcircle</groupId>
-            <artifactId>telemed</artifactId>
+            <groupId>com.kindgeek</groupId>
+            <artifactId>kindgeek</artifactId>
             <version>0.0.1</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -73,18 +60,11 @@
             <version>0.7.0</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
-        <!-- statsd (graphite) -->
-        <dependency>
-            <groupId>com.timgroup</groupId>
-            <artifactId>java-statsd-client</artifactId>
-        </dependency>
-        <!-- statsd (graphite) end -->
 
     </dependencies>
 
